# durham-environmental-monitoring

./: .env.example  .gitignore  BACKLOG.md  ENHANCEMENT_COMPLETE.md  IMPLEMENTATION_TRACKER.md  LICENSE  Makefile  README.md  TODO.md  dbt_project.yml  diagnose_empty_tables.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-rapids.txt  requirements.txt  test_all_oura_endpoints.py  test_bigquery_pipeline.py  test_collection_fixes.py  test_oura_connection.py  verify_tsi_models.py
.devcontainer/: cloud-sql-setup.md  devcontainer.json  post-create.sh  supervisord.conf
bigquery/: create_tsi_raw_view.sql  materialize_raw.sql  tsi_pipeline.sql  views.sql
config/: data_quality.yaml  example_calibration_rules.sql  sharepoint_sync_scope.json
dashboard/: README.md  app.js  appwrite.js  data-service.js  home_env_dashboard_import.json  index.html  research_dashboard_import.json  styles.css
docs/: AQUILA_ROADMAP.md  ARCHITECTURE_OVERVIEW.md  BACKFILL_COMPLETE.md  CALIBRATION_QUICK_REFERENCE.md  CALIBRATION_READY_TO_DEPLOY.md  DAILY_AUTOMATION.md  DASHBOARD_BIGQUERY_TABLES.md  DATA_QUICK_START.md  DATA_REFERENCE.md  GRAFANA_COLOCATION_QUERIES.sql  GRAFANA_COLOCATION_SETUP.md  GRAFANA_DAILY_REFRESH_IMPLEMENTATION.md  GRAFANA_REFRESH_COST_ANALYSIS.md  GRAFANA_RESIDENT_DASHBOARD_SETUP.md  GRAFANA_SETUP.md  LOCAL_DEVELOPMENT.md  Monitoring-Alerts.md  NIFC_FIRE_DATA_SETUP.md  OPERATIONS_RUNBOOK.md  OURA_PIPELINE_INTEGRATION.md  QUICK_START_PHASE1.md  REQUIREMENTS.md  SECURITY_AUDIT.md  SENSOR_CALIBRATION_GUIDE.md  SHAREPOINT_SYNC.md  WU_BACKFILL_ANALYSIS.md  index.html  style.css
helios/: CMakeLists.txt  README.md
hot_durham_project/: README.md
notebooks/: full_notebook_with_TSI_and_WU.ipynb  requirements.txt  weather_analysis.ipynb
oura-rings/: .gitignore  OURA_DATA_OVERVIEW.md  QUICK_START.md  README.md  SECRETS_SETUP.md  SETUP_QUICKSTART.md  __init__.py  cli.py  generate_health_dashboard.py  oura_bigquery_loader.py  oura_client.py  oura_collector.py  oura_import_options.py  oura_transforms.py  oura_variable_inspection.ipynb
scripts/: backfill_catchup.sh  backfill_daily_summaries.sh  backfill_transformations.py  backfill_tsi_device_ids.sh  backfill_tsi_temperature_metrics.py  backfill_wu.sh  backfill_wu_unit_metrics.py  check_data_quality.py  check_freshness.py  check_missing_residents.py  check_oura_coverage.py  check_oura_new_types_quality.py  check_residence_freshness_parity.py  check_row_thresholds.py  check_sensor_coverage.py  ci_sanity_check.sh  cloud_scheduler_config.yaml  convert_tsi_temperature_c_to_f.py  convert_wu_metric_rows_to_imperial.py  create_calibration_config.sh  create_oura_dataset.py  create_secrets.sh  create_sensor_type_views.sql  daily_collection.sh  detect_oura_earliest_dates.py  diagnose_api_columns.py  dry_run_oura_upload.py  estimate_sensor_costs.py  export_curated_research_pack.py  generate_residence_assignments.py  ingest_nifc_fire_perimeters.py  list_tsi_account_devices.py  load_gcs_to_bq.py  load_to_bigquery.py  load_wu_calibration.py  (+32 more)
(+138 files in other folders)
